@@ -36,6 +36,9 @@
 #include	"FEATURE/externs"
 #include	"defs.h"	/* for sh.decomma */
 
+/* POSIX requires error status > 1 if called from test builtin */
+#define ERROR_exit(n) _ERROR_exit_b_test(n)
+
 #ifndef ERROR_dictionary
 #   define ERROR_dictionary(s)	(s)
 #endif
